Fix color contrast issue on Special:ProtectedPages
Change the color for elements with the class mw-protectedpages-unknown to use
the color-subtle token instead of #72777d, as discussed in T367826. This
increases the constrast in dark mode.

Bug: T367826

--- a/resources/src/mediawiki.special/special.less
+++ b/resources/src/mediawiki.special/special.less
@@ -161,7 +161,7 @@ th.mw-revdel-checkbox {
 }
 
 .mw-protectedpages-unknown {
-	color: #72777d;
+	color: @color-subtle;
 	font-size: 90%;
 }
 
